[package]
name = "csv-to-jsonl"
version = "0.1.0"
edition = "2021"
description = "Streams large CSV files to line‑delimited JSON for easy ingestion."
authors = ["Myroslav Mokhammad Abdeljawwad"]
license = "MIT"
repository = "https://github.com/yourusername/csv-to-jsonl"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"